<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSNS</string>
    <string name="hello_world">Hello world!</string>

    <string name="network_problem_message">Network Error Occurred</string>
    <string name="no_data">no image found…</string>

    <string name="action_save">save image</string>
    <string name="action_share">share image</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_profile">Profile</string>
    <string name="action_account_set">Account</string>
    <string name="action_post">Post Image</string>
    <string name="action_upload">Upload</string>

    <string name="saved_image">Image saved !!</string>
    <string name="failed_save_image">Failed to download …</string>
    <string name="share_intent_title">Choose app to share !!</string>
    <string name="failed_share">Failed to share …</string>
    <string name="failed_open_camera">Failed to access your camera.</string>
    <string name="upload_success">Uploaded!!</string>
    <string name="upload_fail">Failed to upload …</string>
    <string name="update_success">Updated!!</string>

    <string name="change_icon_title">Change Profile Image</string>
    <string name="from_gallery">from Gallery</string>

    <string name="upload_from_title">Upload from …</string>
    <string name="upload_from_gallery">From Gallery</string>
    <string name="upload_from_camera">Take a picture</string>

    <string name="pref_group_account">Account</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_title">Your Name</string>
    <string name="pref_group_general">General</string>
    <string name="pref_push_notification">Push Notification</string>
    <string name="pref_term">Terms of Service</string>
    <string name="pref_privacy">Privacy &amp; Policy</string>

    <string name="category1">pikachu</string>
    <string name="category2">hello kitty</string>
    <string name="category3">pink</string>
    <string name="category4">kawaii</string>
    <string name="category5">rilakkuma</string>
    <string name="category6">anime</string>
    <string name="category7">fashion</string>
    <string name="category8">nail</string>
    <string name="category9">selfie</string>
    <string name="category10">Harajuku</string>
    <string name="category11">love</string>
    <string name="category12">dress</string>
    <string name="category13">dog</string>
    <string name="category14">cat</string>
    <string name="category15">girl</string>

    <string name="search_hint">Search…</string>

    <string name="not_available">Sorry, this feature is not available…</string>

</resources>
